--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~47.0.6",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-native": "0.70.5"
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-firebase/app": "^16.4.3",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
+    "@reduxjs/toolkit": "^1.9.0",
+    "@rneui/themed": "^4.0.0-rc.7",
+    "expo": "~46.0.16",
+    "expo-status-bar": "~1.4.0",
+    "firebase": "^9.6.11",
+    "react": "18.0.0",
+    "react-native": "0.69.6",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
