--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.6.11",
+    "idb": "^7.1.1",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-redux": "^8.0.5"
