--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@reduxjs/toolkit": "^1.9.0",
     "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~46.0.16",
-    "expo-camera": "^13.1.0",
+    "expo-camera": "~12.3.0",
+    "expo-modules-core": "^1.0.3",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.6.11",
     "idb": "^7.1.1",
