--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "idb": "^7.1.1",
     "react": "18.0.0",
     "react-native": "0.69.6",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "expo-location": "~14.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
