--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~46.0.16",
     "expo-camera": "~12.3.0",
+    "expo-location": "~14.3.0",
     "expo-modules-core": "^1.0.3",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.6.11",
     "idb": "^7.1.1",
     "react": "18.0.0",
     "react-native": "0.69.6",
-    "react-redux": "^8.0.5",
-    "expo-location": "~14.3.0"
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
